# PLS-Obras

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  seeds.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/auth/: LoginForm.tsx
src/components/compras/: ComprasExternasManager.tsx
src/components/config/: ConfiguracoesManager.tsx
src/components/dashboard/: Dashboard.tsx
src/components/fornecedores/: FornecedoresManager.tsx
src/components/layout/: Sidebar.tsx
src/components/obras/: ObrasManager.tsx
src/components/produtos/: ProdutosManager.tsx
src/components/relatorios/: RelatoriosManager.tsx
src/components/taloes/: TaloesManager.tsx
src/components/ui/: card.tsx  dialog.tsx  input.tsx  select.tsx  signature-pad.tsx  table.tsx
src/lib/: helpers.ts  supabase.ts  utils.ts
src/store/: mockData.ts  useStore.ts
src/types/: index.ts
